--- a/style.css
+++ b/style.css
@@ -1,36 +1,42 @@
-img{
-    width: 150px;
-    height: 170px;
-    margin-top: 10px;
-    margin-left: 10px;
- }
- .header{
-    background-color: darkcyan;
-    height: 250px;
-    display: flex;
- }
- h1{
-    margin-top: 40px;
-    color:aliceblue;
- }
- .tools{
-    background-color: black;
+img {
+   width: 150px;
+   height: 170px;
+   margin-top: 10px;
+   margin-left: 10px;
+   border-radius: 550px;
+}
+
+.header {
+   background-color:slategray;
+   height: 250px;
+   display: flex;
+}
+
+h1 {
+   margin-top: 40px;
+   color: aliceblue;
+}
+
+.tools {
+   background-color: black;
    display: flex;
    padding: 0px;
- }
- .tools a{
+}
+
+.tools a {
    text-decoration: none;
    color: white;
    padding: 15px;
 
 
- }
-#nav .tools .sunbnav li:hover>a{
+}
+
+#nav .tools .sunbnav li:hover>a {
    color: red;
 }
 
 
-#nav .sunbnav{
+#nav .sunbnav {
    display: none;
    background-color: #eee;
    min-width: 160px;
@@ -38,97 +44,113 @@ img{
    position: absolute;
 }
 
-#nav .sunbnav a{
-color: #000;
-text-decoration: none;
-padding: 5px;
+#nav .sunbnav a {
+   color: #000;
+   text-decoration: none;
+   padding: 5px;
 }
 
-#nav ul:hover .sunbnav{
+#nav ul:hover .sunbnav {
    display: block;
 }
-#nav ul a{
+
+#nav ul a {
    display: block;
 }
-#nav ul{
+
+#nav ul {
    position: relative;
 }
-.sunbnav{
+
+.sunbnav {
    padding: 10px;
    list-style-type: none;
 }
 
 
- .boder{
-    border: 1px solid;
-    height: auto;
-    display: flex;
-    background-color: #eee;
- }
- h2{
-    color: black;
-    width: 200px;
- }
-.menu li{
-    border:  1px solid black;
-    list-style-type: none;
-    padding: 8px;
- }
+.boder {
+   border: 1px solid;
+   height: auto;
+   display: flex;
+   background-color: #eee;
+}
 
- .class{
-   border-top:1px solid black; 
- }
- .menu{
-    border-right: 1px solid;
-    width: 200px;
-    height: auto;
- } 
- .boder .menu a{
-    text-decoration: none;
- }
- .product{
-    margin: 20px;
- }
+h2 {
+   color: black;
+   width: 200px;
+}
 
- .list-card{
-    display: flex;
-    flex-wrap: wrap;  /*tự động xuống hàng hoặc vẫn luôn nằm trên cùng một hàng khi kích thước container thay đổi*/
- }
+.menu li {
+   border: 1px solid black;
+   list-style-type: none;
+   padding: 8px;
+}
 
- .card{
-    background: #fff;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;   /*flex item được sắp xếp theo chiều dọc*/
-    justify-content: center;  /*căn giữa các thành phần trong flexbox*/
-    align-items: center; /*đẩy các phần tử vào giữa hướng chính*/
-    margin: 10px;    
+.class {
+   border-top: 1px solid black;
+}
 
- }
+.menu {
+   border-right: 1px solid;
+   width: 200px;
+   height: auto;
+}
 
- .card__name {
-    color: blue;
-    text-transform: uppercase; /*tất cả các chữ sẽ in hoa*/
- }
+.boder .menu a {
+   text-decoration: none;
+}
 
- .card__img {
-    width: 250px;
-    height: 200px;
-    margin: 0;
- }
- .card__desc{
-    margin-top: 15px;
-    text-transform: uppercase;
- }
+.product {
+   margin: 20px;
+}
 
- .card__status{
-    color: red;
-    font-weight: 800;
- }
- .card__buy{
-    margin-top: 5px;
- }
- #nav{
+.list-card {
+   display: flex;
+   flex-wrap: wrap;
+   /*tự động xuống hàng hoặc vẫn luôn nằm trên cùng một hàng khi kích thước container thay đổi*/
+}
+
+.card {
+   background: #fff;
+   padding: 20px;
+   display: flex;
+   flex-direction: column;
+   /*flex item được sắp xếp theo chiều dọc*/
+   justify-content: center;
+   /*căn giữa các thành phần trong flexbox*/
+   align-items: center;
+   /*đẩy các phần tử vào giữa hướng chính*/
+   margin: 10px;
+
+}
+
+.card__name {
+   color: blue;
+   text-transform: uppercase;
+   /*tất cả các chữ sẽ in hoa*/
+}
+
+.card__img {
+   width: 250px;
+   height: 200px;
+   margin: 0;
+}
+
+.card__desc {
+   margin-top: 15px;
+   text-transform: uppercase;
+}
+
+.card__status {
+   color: red;
+   font-weight: 800;
+}
+
+.card__buy {
+   margin-top: 5px;
+}
+
+#nav {
    padding: 0px;
    margin: 0px;
- }
+}
